[gd_scene load_steps=6 format=3 uid="uid://b5xa48ouq3t41"]

[ext_resource type="Script" uid="uid://vaot5nq3eppa" path="res://scripts/levels/platform.gd" id="1_a2g45"]
[ext_resource type="Texture2D" uid="uid://dkpcrnhd2du7m" path="res://assets/sprites/tilesets/level_1.png" id="1_k3bbv"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ba0x2"]
size = Vector2(64, 15)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_nlgqw"]
texture = ExtResource("1_k3bbv")
2:0/0 = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)

[sub_resource type="TileSet" id="TileSet_507ja"]
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_nlgqw")

[node name="platform" type="CharacterBody2D"]
motion_mode = 1
script = ExtResource("1_a2g45")

[node name="collision_shape_2d" type="CollisionShape2D" parent="."]
position = Vector2(32, 7.5)
shape = SubResource("RectangleShape2D_ba0x2")

[node name="tile_map_layer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray(0, 0, 0, 0, 0, 0, 0, 0, 2, 0, 0, 0, 0, 0, 2, 0, 0, 0, 0, 0, 2, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 2, 0, 0, 0, 0, 0, 3, 0, 0, 0, 0, 0, 2, 0, 0, 0, 0, 0)
tile_set = SubResource("TileSet_507ja")

[node name="navigation_agent_2d" type="NavigationAgent2D" parent="."]
path_postprocessing = 1
debug_enabled = true

[node name="marker_2d_start" type="Marker2D" parent="."]
gizmo_extents = 16.0

[node name="marker_2d_end" type="Marker2D" parent="."]
position = Vector2(64, 0)
gizmo_extents = 16.0
